--- a/client/index.html
+++ b/client/index.html
@@ -1,2 +1,18 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>CSV Report Generator</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <form action="" method="POST">
+        <div>
+            <input type="text" id="text">
+            <button type="submit" value="Submit">Submit</button>
+        </div>
+      </form>
+    <script src="script.js"></script>
+  </body>
+</html>
