--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
             <button type="submit" value="Submit">Submit</button>
         </div>
       </form>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
+    
   </body>
 </html>
