--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <form action="" method="POST">
+    <form action="/upload_json" method="POST">
         <div>
             <input type="text" id="text">
             <button type="submit" value="Submit">Submit</button>
         </div>
       </form>
     <script src="app.js"></script>
-    
   </body>
 </html>
